# netoptimcpp

./: .CMakeLists.txt.un~  .gitignore  .gitmodules  .gitpod.Dockerfile  .gitpod.yml  .travis-old.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  envconfig.sh  environment-dev.yml  test_neg_cycle.cpp  test_neg_cycle.cpp.bak
.github/workflows/: cmake-codecov.yml  cmake-debug.yml  cmake-release.yml
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: CI.CTestScript.cmake  CodeCoverage.cmake  Coverage.cmake
docs/: Makefile  conf.py  how_created.rst  index.rst  using_intersphinx.rst
lib/: .CMakeLists.txt.un~  CMakeLists.txt
lib/bench/: CMakeLists.txt  one_example.cpp
lib/include/: gsl  vertex_cover.hpp
lib/include/netoptim/: min_cycle_ratio.hpp  neg_cycle.hpp  parametric.hpp  primal_dual.hpp  test_cases.hpp  test_cases2_boost.hpp  test_cases_boost.hpp
lib/include/py2cpp/: fractions.hpp  nx2bgl.hpp  py2cpp.hpp
lib/include/xnetwork/: exception.hpp
lib/include/xnetwork/classes/: coreviews.hpp  digraphs.hpp  graph.hpp  reportviews.hpp
lib/src/: neg_cycle.cpp
lib/test/: CMakeLists.txt
lib/test/src/: test_cycle_ratio.cpp  test_cycle_ratio_boost.cpp  test_main.cpp  test_neg_cycle.cpp  test_neg_cycle.tpp  test_neg_cycle_boost.cpp  test_parametric.cpp  test_parametric.cpp.bak  test_parametric_boost.cpp  test_parametric_boost.cpp.bak  test_xnetwork.cpp
